src/objects/Walk_in__c.object
<CustomObject>
    <fields>
        <fullName>Desired_Unit_Type__c</fullName>
        <label>Desired Unit Type</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_address__c</fullName>
        <label>Email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Move_in_Date__c</fullName>
        <label>Move in Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <label>Primary Phone</label>
        <type>Phone</type>
    </fields>
    <label>Record Walk In</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Walk in Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Walk ins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>